pi4/original_loki/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app.kubernetes.io/instance: loki
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: grafana
      app.kubernetes.io/version: 6.7.0
      helm.sh/chart: grafana-5.7.10
    name: loki-grafana
    namespace: loki
  spec:
    clusterIP: 10.43.192.96
    ports:
    - name: service
      port: 80
      targetPort: 3000
    selector:
      app.kubernetes.io/instance: loki
      app.kubernetes.io/name: grafana
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: loki
      chart: loki-2.3.0
      heritage: Helm
      release: loki
      variant: headless
    name: loki-headless
    namespace: loki
  spec:
    clusterIP: None
    ports:
    - name: http-metrics
      port: 3100
      targetPort: http-metrics
    selector:
      app: loki
      release: loki
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: loki
      chart: loki-2.3.0
      heritage: Helm
      release: loki
    name: loki
    namespace: loki
  spec:
    clusterIP: 10.43.221.38
    ports:
    - name: http-metrics
      port: 3100
      targetPort: http-metrics
    selector:
      app: loki
      release: loki
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      prometheus.io/scrape: "true"
    labels:
      app.kubernetes.io/instance: loki
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: kube-state-metrics
      helm.sh/chart: kube-state-metrics-2.8.14
    name: loki-kube-state-metrics
    namespace: loki
  spec:
    clusterIP: 10.43.24.169
    ports:
    - name: http
      port: 8080
    selector:
      app.kubernetes.io/instance: loki
      app.kubernetes.io/name: kube-state-metrics
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: prometheus
      chart: prometheus-11.16.9
      component: alertmanager
      heritage: Helm
      release: loki
    name: loki-prometheus-alertmanager
    namespace: loki
  spec:
    clusterIP: 10.43.151.41
    ports:
    - name: http
      port: 80
      targetPort: 9093
    selector:
      app: prometheus
      component: alertmanager
      release: loki
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      prometheus.io/scrape: "true"
    labels:
      app: prometheus
      chart: prometheus-11.16.9
      component: node-exporter
      heritage: Helm
      release: loki
    name: loki-prometheus-node-exporter
    namespace: loki
  spec:
    clusterIP: None
    ports:
    - name: metrics
      port: 9100
    selector:
      app: prometheus
      component: node-exporter
      release: loki
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      prometheus.io/probe: pushgateway
    labels:
      app: prometheus
      chart: prometheus-11.16.9
      component: pushgateway
      heritage: Helm
      release: loki
    name: loki-prometheus-pushgateway
    namespace: loki
  spec:
    clusterIP: 10.43.196.197
    ports:
    - name: http
      port: 9091
    selector:
      app: prometheus
      component: pushgateway
      release: loki
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: prometheus
      chart: prometheus-11.16.9
      component: server
      heritage: Helm
      release: loki
    name: loki-prometheus-server
    namespace: loki
  spec:
    clusterIP: 10.43.119.250
    ports:
    - name: http
      port: 80
      targetPort: 9090
    selector:
      app: prometheus
      component: server
      release: loki
- apiVersion: v1
  kind: Service
  metadata:
    name: syslog
    namespace: loki
  spec:
    clusterIP: 10.43.64.92
    ports:
    - nodePort: 31514
      port: 1514
    selector:
      app: promtail
    type: NodePort
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
